--- a/build.gradle
+++ b/build.gradle
@@ -19,4 +19,7 @@ dependencies {
     compile("com.h2database:h2:${h2}")
     compile("org.hibernate:hibernate-core:${hibernate_jpa}")
     compile("org.hibernate:hibernate-entitymanager:${hibernate_jpa}")
+    compile group: 'javax', name: 'javaee-api', version: '7.0'
+    //compile 'javax.ws.rs:javax.ws.rs-api:2.0.1'
+    //compile group: 'javax.inject', name: 'javax.inject', version: '1'
 }
